# tgfs

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  AZURE_KEYVAULT_SETUP.md  Dockerfile  Dockerfile.frontend  README.md  config-azure-vm.yaml  config-test.yaml  coverage.xml  demo-config.yaml  entrypoint.sh  example-config-azure.yaml  example-config.yaml  jest.config.js  main.py  makefile  package.json  pyproject.toml  qodana.yaml  tgfs-fe-nginx.conf  tsconfig.build.json  tsconfig.json
.github/workflows/: docker-build-push.yml  gh-pages.yml  test.yml
asgidav/: app.py  async_map.py  folder.py  member.py  reqres.py  resource.py  server.py  ticker.py  utils.py
src/: cmd.ts  config.ts  env.ts  index.ts
src/api/: client.ts  index.ts  interface.ts  types.ts  utils.ts
src/api/client/: directory-api.ts  file-api.ts  file-desc-api.ts  file-ref-api.ts  index.ts  message-api.ts  metadata-api.ts  model.ts
src/api/impl/: gramjs.ts  index.ts  telegraf.ts
src/api/ops/: copy-dir.ts  copy-file.ts  create-dir.ts  create-empty-file.ts  index.ts  list.ts  move-dir.ts  move-file.ts  navigate-to-dir.ts  remove-dir.ts  remove-file.ts  upload.ts  utils.ts
src/api/utils/: index.ts
src/auth/: account.ts  as-bot.ts  as-user.ts  bot.ts  index.ts  login.ts
src/commands/: cp.ts  executor.ts  get.ts  index.ts  ls.ts  mkdir.ts  navigate-to-dir.ts  parser.ts  rm.ts  touch.ts  utils.ts
src/errors/: authentication.ts  base.ts  cmd.ts  directory.ts  error-codes.ts  file.ts  index.ts  path.ts  telegram.ts
src/model/: directory.ts  file.ts  message.ts  metadata.ts
src/server/manager/: auth.ts  bot.ts  db.ts  http-server.ts  index.ts
src/server/monitor/: index.ts
src/server/webdav/: index.ts  tgfs-filesystem.ts  tgfs-propertymanager.ts  upload-stream.ts
src/sync/: index.ts  sync-from-local-only.ts  sync-from-remote-only.ts
src/utils/: flow-control.ts  ip-address.ts  key-vault.ts  logger.ts  queue.ts  retry.ts  validate-name.ts
test/api/: mock-messages.ts  mock-tg-client.ts  queue.spec.ts
test/api/model/: operations.spec.ts  serialization-and-deseriealization.spec.ts
test/cmd/: cmd.spec.ts
test/config/: config.spec.ts
test/mock/: mock-tg-client.ts
test/server/: webdav.spec.ts
test/unit-tests/model/: directory.spec.ts
test/utils/: mock-gramjs-api.ts  mock-messages.spec.ts  mock-messages.ts  mock-telegraf-api.ts  mock-tg-client.ts  queue.spec.ts
tests/: test_main.py
tests/test_asgidav/: common.py  test_app.py  test_async_map.py  test_cache.py  test_folder.py  test_member.py  test_reqres.py  test_resource.py
tests/tgfs/app/: test_fs_cache.py  test_fs_cache_app.py  test_main_app.py
tests/tgfs/auth/: test_basic.py  test_bearer.py  test_user.py
tests/tgfs/config/: test_config.py
tests/tgfs/core/: test_common.py  test_ops.py
tests/tgfs/tasks/: test_models.py  test_task_store.py
tests/tgfs/utils/: test_message_cache.py  (+3 more)
tgfs/: config.py  main.py  reqres.py
tgfs-gh-pages/: image-loader.js  next.config.ts  package-lock.json  package.json
tgfs-gh-pages/app/: layout.tsx  page.tsx  theme-provider.tsx
tgfs/api/: __init__.py  interface.py  ops.py  types.py
tgfs/app/: __init__.py  fs_cache.py  utils.py
tgfs/auth/: __init__.py  basic.py  bearer.py  user.py
tgfs/core/: __init__.py  cache.py  client.py  ops.py
tgfs/errors/: __init__.py  base.py  error_code.py  path.py  telegram.py  tgfs.py
tgfs/model/: common.py  directory.py  file.py  message.py  metadata.py
tgfs/tasks/: __init__.py  integrations.py  models.py  task_store.py
tgfs/telegram/: __init__.py  interface.py
tgfs/utils/: chained_async_iterator.py  logger.py  message_cache.py  noexcept.py  others.py  time.py  validate_name.py
(+108 files in other folders)
