[project]
name = "tgfs"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    {name = "WheatCarrier",email = "wheatcarrier@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "telethon (>=1.40.0,<2.0.0)",
    "pyrate-limiter (>=3.7.0,<4.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "poetry-core (>=2.0.0,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "lru-dict (>=1.3.0,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pygithub (>=2.6.1,<3.0.0)",
    "rsa (==4.9.1)",
    "pre-commit (>=4.2.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.10"
black = "^25.1.0"
pytest = "^8.4.1"
pytest-mock = "^3.14.1"

[tool.ruff]
fix = true

[tool.ruff.lint]
select = [
    "F",  # Formatting
    "I",  # Imports
    "R",  # Refactoring
    "S",  # Style
    "T",  # Type checking
]
ignore = [
    "E501",  # Line too long
    "S320",  # Using `lxml` to parse untrusted data is known to be vulnerable to XML attacks
]