[project]
name = "tgfs"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    {name = "WheatCarrier",email = "wheatcarrier@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "telethon (>=1.40.0,<2.0.0)",
    "pyrate-limiter (>=3.9.0,<4.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "fastapi (>=0.116.1)",
    "lxml (>=6.0.0,<7.0.0)",
    "poetry-core (>=2.0.0,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "lru-dict (>=1.3.0,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pygithub (>=2.7.0,<3.0.0)",
    "rsa (==4.9.1)",
    "pyrofork (>=2.3.68,<3.0.0)",
    "tgcrypto-pyrofork (>=1.2.7,<2.0.0)",
    "cryptg (>=0.5.1,<0.6.0) ; platform_system != \"Windows\"",
    "uvloop (>=0.21.0,<0.22.0) ; platform_system != \"Windows\"",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
ruff = "^0.12.8"
black = "^25.1.0"
pytest = "^8.4.1"
pytest-asyncio = "^0.25.1"
pytest-mock = "^3.14.1"
pytest-cov = "^6.2.1"
types-pyyaml = "^6.0.12.20250809"
pre-commit = "^4.3.0"
lxml-stubs = "^0.5.1"
httpx = "^0.28.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
fix = true

[tool.ruff.lint]
select = [
    "F",  # Formatting
    "I",  # Imports
    "R",  # Refactoring
    "S",  # Style
    "T",  # Type checking
]
ignore = [
    "E501",  # Line too long
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/tests/*",
    "test_*.py",
    "*_test.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]